--- a/Backend/node-express/package.json
+++ b/Backend/node-express/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "node-test-project",
+  "name": "test-project",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,7 @@
     "express": "^4.17.1",
     "multer": "^1.4.1",
     "nodemon": "^1.19.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
