Summary EndPoints added

--- a/Backend/node-express/package.json
+++ b/Backend/node-express/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "multer": "^1.4.1",
     "nodemon": "^1.19.1",
-    "sqlite3": "^4.0.9"
+    "sqlite3": "^4.0.9",
+    "validator": "^11.1.0"
   }
 }
